--- a/index.html
+++ b/index.html
@@ -41,5 +41,9 @@
         setInterval(updateCountdown, 1000);
         updateCountdown();
     </script>
+
+      <!-- Embed Looker Studio -->
+  <iframe src="https://lookerstudio.google.com/reporting/de8bac05-1013-427d-9940-654aa1e10ea2" allowfullscreen></iframe>
+
 </body>
 </html>
