--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </script>
 
       <!-- Embed Looker Studio -->
-  <iframe src="https://lookerstudio.google.com/reporting/de8bac05-1013-427d-9940-654aa1e10ea2" allowfullscreen></iframe>
+  <iframe width="600" height="450" src="https://lookerstudio.google.com/embed/reporting/de8bac05-1013-427d-9940-654aa1e10ea2/page/LZROF" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
 
 </body>
 </html>
